Fixed all stuff except button text alignment and height

--- a/static/shared/css/adaptive.css
+++ b/static/shared/css/adaptive.css
@@ -189,17 +189,24 @@
      */
     header,
     #siteHeader {
-        min-height: 19vw;
+        width: 100%;
         height: auto;
     }
     #logo {
-        height: 8.4vw;
-        width: 30vw;
+        height: auto;
+        width: 100%;
+        margin: 0;
+        max-width: 214px;
     }
     #mainNav {
         line-height: 100%;
         height: 100%;
+        /* TODO what does this do? */
         float: none;
+    }
+    #mainNav > #logo-link {
+        width: 50%;
+        padding: 5%;
     }
     #mainNav a:after {
         margin: 0 auto 0 auto;
@@ -240,19 +247,20 @@
         display: inline-block;
         float: right;
         font-family: 'ProximaNovaSoft', 'Varela Round', sans-serif;
-        font-size: 4vw;
+        width: 50%;
         font-weight: 700;
-        line-height: 19vw;
         margin-top: 0;
     }
     #mainNav > #mobile-nav a:after {
         display: none;
     }
     #mobile-nav > li {
-        height: 19vw;
+        height: auto;
         padding: 0 6vw 0 6vw;
+        padding: 0 10%;
         margin-left: 0;
         border-left: 2px solid rgb(213,210,201);
+        float: right;
     }
     #mobile-nav > li:hover {
         color: #ea4b35;
